--- a/js-client/package.json
+++ b/js-client/package.json
@@ -16,7 +16,8 @@
     "ws": ">=8.17.1",
     "body-parser": ">=1.20.3",
     "rollup": ">=2.79.2",
-    "http-proxy-middleware": ">=2.0.7"
+    "http-proxy-middleware": ">=2.0.7",
+    "svgo": ">=3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
